bindings/ruby/lib/zyre/ffi.rb


      begin # DRAFT method
        attach_function :zyre_event_new, [:pointer], :pointer, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function new() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_destroy, [:pointer], :void, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function destroy() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_type, [:pointer], :zyre event_type, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function type() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_sender, [:pointer], :string, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function sender() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_name, [:pointer], :string, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function name() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_address, [:pointer], :string, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function address() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_headers, [:pointer], :pointer, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function headers() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_header, [:pointer, :string], :string, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function header() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_group, [:pointer], :string, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function group() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_msg, [:pointer], :pointer, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function msg() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_print, [:pointer], :void, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function print() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end
      begin # DRAFT method
        attach_function :zyre_event_test, [:bool], :void, **opts
      rescue ::FFI::NotFoundError
        if $VERBOSE || $DEBUG
          warn "The function test() can't be used through " +
               "this Ruby binding because it's not available."
        end
      end

      require_relative 'ffi/event'
    end
  end
end

################################################################################
#  THIS FILE IS 100% GENERATED BY ZPROJECT; DO NOT EDIT EXCEPT EXPERIMENTALLY  #
#  Please refer to the README for information about making permanent changes.  #
################################################################################
